apps/servicex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicex
  namespace: servicex
spec:
  replicas: 2
  selector:
    matchLabels:
      app: servicex
  template:
    metadata:
      labels:
        app: servicex
    spec:
      containers:
      - name: servicex
        image: vamshi979119/s2s:v1.0.0
        ports:
        - containerPort: 8080
