apps/servicex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicex
  namespace: servicex
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: servicex
