apps/servicex/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: servicex-jwt-authorization
  namespace: servicex
spec:
  selector:
    matchLabels:
      app: servicex
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
